unpackaged/main/default/objects/User/fields/Authenticate_to_use_investor_portal__c.field-meta.xml
<CustomField>
    <fullName>Authenticate_to_use_investor_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor Portal Access</label>
    <type>Checkbox</type>
</CustomField>