unpackaged/main/default/objects/User/fields/Enable_RTA_Toolbar__c.field-meta.xml
<CustomField>
    <fullName>Enable_RTA_Toolbar__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable RTA Toolbar</label>
    <type>Checkbox</type>
</CustomField>