unpackaged/main/default/objects/User/fields/Investor_Portal_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Investor_Portal_Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor Portal Setup</label>
    <type>Checkbox</type>
</CustomField>