unpackaged/main/default/objects/User/fields/Snooze_Notification__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Notification__c</fullName>
    <description>this field created by Priyank for store next popup visible date</description>
    <label>Snooze Notification</label>
    <type>Date</type>
</CustomField>