unpackaged/main/default/objects/User/fields/User_Identifier__c.field-meta.xml
<CustomField>
    <fullName>User_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>